# huron_control

./: CHANGELOG.md  CONTRIBUTING.md  README.md  TorqueMotor.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/huron_control/: PackageConfigurationError.py  PositionMotor.py  TorqueMotor.py  VelocityMotor.py  __init__.py  config.py
src/huron_control/default_driver/: DefaultMotor.py  __init__.py
tests/: test_configure_driver.py  test_huron_control.py
