[tool.poetry]
name = "huron_control"
version = "0.1.0"
description = "Mid-level API for HURON control"
authors = ["wpi-huron"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
